--- a/Todolist2/WebAPI/Web.config
+++ b/Todolist2/WebAPI/Web.config
@@ -4,6 +4,10 @@
   https://go.microsoft.com/fwlink/?LinkId=301879
   -->
 <configuration>
+  <configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  </configSections>
   <appSettings>
   </appSettings>
   <system.web>
@@ -55,4 +59,9 @@
   <connectionStrings>
     <add name="TodolistDB" connectionString="Data Source=.\SQLEXPRESS;                     Integrated Security=True;                     MultipleActiveResultSets=True; Initial Catalog=TodolistDB" providerName="System.Data.SqlClient" />
   </connectionStrings>
+  <entityFramework>
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
 </configuration>
